--- a/index.html
+++ b/index.html
@@ -1,57 +1,103 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Metadatos básicos -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facundo Villarreal - Aspiring Technical Artist</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <script defer src="/js/script.js"></script>
+    <title>Facundo Villarreal - Aspiring Technical Artist</title> <!-- Título descriptivo para SEO y pestaña del navegador -->
+    <meta name="description" content="Portfolio de Facundo Villarreal, Artista Técnico especializado en Unreal Engine, fusionando diseño arquitectónico y desarrollo de software.">
+    <meta name="author" content="Facundo Villarreal">
+
+    <!-- Enlace a la hoja de estilos principal -->
+    <!-- Usar rutas relativas para facilitar el despliegue, especialmente en GitHub Pages -->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/prism.css">
+
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+
+    <!-- Script principal, 'defer' asegura que se ejecute después de que el HTML se haya parseado -->
+    <script defer src="js/script.js"></script>
+    <script defer src="js/prism.js"></script>
 </head>
-<body class="mode-light mode-artist"> <header class="site-header sticky-header"> <div class="header-container container"> <div class="header-logo">
-                <a href="#">Facundo Villarreal</a> </div>
+
+<!-- El body tendrá clases dinámicas para los modos (light/dark, artist/technical) -->
+<body class="mode-light mode-artist"> <!-- Default modes -->
+
+    <!-- Cabecera del Sitio -->
+    <header class="site-header sticky-header"> <!-- 'sticky-header' para la funcionalidad de header pegajoso -->
+        <div class="header-container container">
+            <!-- Logo o Nombre del Sitio -->
+            <div class="header-logo">
+                <a href="#">Facundo Villarreal</a> <!-- Enlace a la página de inicio (actualmente la misma página) -->
+            </div>
+            <!-- Contenedor para los botones de cambio de modo -->
             <div class="header-toggles">
-                <button id="theme-toggle" class="mode-toggle" aria-label="Cambiar modo claro/oscuro">
-                    <span class="icon-light">[ICONO SOL]</span>
-                    <span class="icon-dark">[ICONO LUNA]</span>
+                <!-- Botón para cambiar entre modo claro y oscuro -->
+                <button id="theme-toggle" class="mode-toggle switch-toggle" aria-label="Cambiar modo claro/oscuro" role="switch" aria-checked="false">
+                    <!-- Los iconos reales (SVG o fuente de iconos) irían aquí.
+                         El CSS actual para .mode-toggle::after sugiere un switch visual,
+                         por lo que estos spans podrían no ser necesarios si se usa ese estilo. -->
+                    <span class="icon-light" aria-hidden="true">
+                        <img src="assets/img/sun-svgrepo-com.svg" class="icon icon-svg-sol" alt="Modo Claro">
+                    </span> <!-- Ejemplo con emoji, reemplazar con SVG/Icono -->
+                    <span class="icon-dark" aria-hidden="true">
+                        <img src="assets/img/moon-svgrepo-com.svg" class="icon icon-svg-luna" alt="Modo Oscuro">
+                    </span>  <!-- Ejemplo con emoji, reemplazar con SVG/Icono -->
                 </button>
-                <button id="profile-toggle" class="mode-toggle" aria-label="Cambiar modo artista/técnico">
-                    <span class="icon-artist">[ICONO PINCEL]</span>
-                    <span class="icon-technical">[ICONO ENGRANAJE]</span>
+                <!-- Botón para cambiar entre modo artista y técnico -->
+                <button id="profile-toggle" class="mode-toggle switch-toggle" aria-label="Cambiar modo artista/técnico" role="switch" aria-checked="false">
+                    <span class="icon-artist" aria-hidden="true">
+                        <img src="assets/img/brush-svgrepo-com.svg" class="icon icon-svg-sol" alt="Modo Artista">
+                    </span> <!-- Ejemplo con emoji, reemplazar con SVG/Icono -->
+                    <span class="icon-technical" aria-hidden="true">
+                        <img src="assets/img/gear-11-svgrepo-com.svg" class="icon icon-svg-luna" alt="Modo Técnico">
+                    </span><!-- Ejemplo con emoji, reemplazar con SVG/Icono -->
                 </button>
-                </div>
+            </div>
         </div>
     </header>
 
+    <!-- Contenido Principal de la Página -->
     <main>
 
+        <!-- Sección Hero de bienvenida e introducción -->
         <section class="hero-section container">
             <div class="hero-content">
+                <!-- Texto de la sección Hero -->
                 <div class="hero-text">
                     <h2>Del Plano al Píxel: Un Viaje Técnico y Artístico</h2>
                     <p>Fusionando 7 años de diseño arquitectónico con desarrollo de software para crear mundos y experiencias inmersivas como Artista Técnico en Unreal Engine.</p>
                 </div>
+                <!-- Elemento visual de la sección Hero (Video de Vimeo) -->
                 <div class="hero-visual">
-                    <div class="vimeo-container">
-                        <iframe src="https://player.vimeo.com/video/983405007?h=9c4d70c300" 
-                                frameborder="0" 
-                                allow="autoplay; fullscreen" 
-                                allowfullscreen>
+                    <div class="vimeo-container"> <!-- Contenedor para hacer el iframe responsivo -->
+                        <iframe 
+                            src="https://player.vimeo.com/video/983405007?h=9c4d70c300&autopause=0&background=1&dnt=1"
+                            frameborder="0"
+                            allow="autoplay; fullscreen; picture-in-picture"
+                            allowfullscreen
+                            loading="lazy"
+                            title="Reel o Video Destacado de Facundo Villarreal"> <!-- Título descriptivo para accesibilidad -->
                         </iframe>
                     </div>
                 </div>
             </div>
         </section>
 
+        <!-- Sección para destacar procesos o proyectos clave -->
         <section class="process-highlights container">
             <h2>Destellos del Proceso</h2>
 
+            <!-- Artículo individual de proceso/proyecto -->
             <article class="process-item">
                 <div class="process-visual">
+                    <!-- Slider de imágenes para el shader de nieve -->
                     <div class="image-slider" data-slider-id="shader-nieve">
                         <div class="slider-images">
-                            <img src="nieve-render.jpg" alt="Render final shader nieve" class="slider-image active" data-layer="Render Final">
-                            <img src="nieve-graph.jpg" alt="Gráfico de nodos shader nieve" class="slider-image" data-layer="Material Graph">
-                            <img src="nieve-mask.jpg" alt="Máscara de interacción nieve" class="slider-image" data-layer="Interaction Mask">
+                            <!-- Reemplazar 'nieve-render.jpg' con la ruta correcta, ej: 'assets/img/projects/nieve/render.jpg' -->
+                            <img src="assets/img/nieve-render.jpg" alt="Render final del shader de nieve interactiva" class="slider-image active" data-layer="Render Final">
+                            <img src="assets/img/nieve-graph.jpg" alt="Gráfico de nodos del material de nieve en Unreal Engine" class="slider-image" data-layer="Material Graph">
+                            <img src="assets/img/nieve-mask.jpg" alt="Máscara de interacción utilizada para las huellas en la nieve" class="slider-image" data-layer="Interaction Mask">
                         </div>
                         <div class="slider-controls">
                             <button class="slider-control-item active" data-target-layer="Render Final">Render</button>
@@ -62,40 +108,50 @@
                 </div>
                 <div class="process-text">
                     <h3>Shader Nieve Interactiva</h3>
-                    <p>Desarrollo de un material avanzado en Unreal Engine que simula nieve acumulada y permite interacción dinámica (huellas, deformación) utilizando Blueprints y texturas complejas.</p>
+                    <p>Desarrollo de un material avanzado en Unreal Engine que simula nieve acumulada y permite interacción dinámica (huellas, deformación) utilizando Blueprints y texturas de render target para la persistencia de la deformación.</p>
+                    <!-- Snippet técnico (visible en modo técnico) -->
                     <div class="technical-snippet">
                         <h4>Blueprint Logic Snippet:</h4>
-                        <img src="nieve-blueprint.png" alt="Captura de Blueprint para interacción de nieve">
-                        </div>
-                    <a href="[Enlace a ArtStation/Proyecto]" class="cta-link" target="_blank">Ver más detalles</a>
+                        <img src="assets/img/nieve-blueprint.png" alt="Captura de pantalla del Blueprint para la interacción de la nieve">
+                    </div>
+                    <a href="[Enlace a ArtStation o proyecto detallado]" class="cta-link" target="_blank" rel="noopener noreferrer">Ver más detalles del proyecto</a>
                 </div>
             </article>
 
+            <!-- Otro artículo de proceso/proyecto, con layout invertido -->
             <article class="process-item layout-reversed">
                 <div class="process-text">
                     <h3>Herramienta de Layout Procedural</h3>
-                    <p>Creación de una herramienta en Python para [Software 3D o UE] que automatiza la colocación de assets (ej: vegetación, rocas) siguiendo reglas definidas, optimizando el workflow de creación de entornos.</p>
-                     <div class="technical-snippet">
-                        <h4>Python Snippet:</h4>
+                    <p>Creación de una herramienta en Python para Unreal Engine (o Maya/Blender) que automatiza la colocación de assets (ej: vegetación, rocas) siguiendo reglas definidas por el usuario (noise, pendientes, áreas de exclusión), optimizando significativamente el workflow de creación de entornos extensos.</p>
+                     <!-- Snippet técnico (visible en modo técnico) -->
+                    <div class="technical-snippet">
+                        <h4>Python Snippet (Conceptual):</h4>
                         <pre><code class="language-python">
-                            import maya.cmds as cmds # O el API correspondiente
+import unreal # O el API correspondiente (maya.cmds, bpy)
 
-                            def procedural_placement(assets, area, rules):
-                                for asset in assets:
-                                    # Logic for placing assets based on rules
-                                    position = calculate_position(area, rules)
-                                    if position:
-                                        cmds.instance(asset, position=position)
+def procedural_placement(assets_to_place, target_actor, rules):
+    for asset_path in assets_to_place:
+        # Lógica para calcular posición, rotación, escala
+        # basada en 'rules' (ej. samplear landscape, evitar colisiones)
+        transform = calculate_transform(target_actor, rules)
+        if transform:
+            unreal.EditorLevelLibrary.spawn_actor_from_class(
+                unreal.EditorAssetLibrary.load_blueprint_class(asset_path),
+                transform.location,
+                transform.rotation
+            )
+# Esta es una simplificación, la lógica real sería más compleja.
                         </code></pre>
                     </div>
-                    <a href="[Enlace a GitHub/Proyecto]" class="cta-link" target="_blank">Ver código en GitHub</a>
+                    <a href="[Enlace a GitHub o demo de la herramienta]" class="cta-link" target="_blank" rel="noopener noreferrer">Ver código o demo de la herramienta</a>
                 </div>
                 <div class="process-visual">
-                     <div class="image-slider" data-slider-id="procedural-tool">
+                     <!-- Slider de imágenes para la herramienta procedural -->
+                    <div class="image-slider" data-slider-id="procedural-tool">
                         <div class="slider-images">
-                            <img src="tool-result.jpg" alt="Resultado entorno con herramienta procedural" class="slider-image active" data-layer="Resultado Final">
-                            <img src="tool-ui.jpg" alt="Interfaz de la herramienta procedural" class="slider-image" data-layer="UI Herramienta">
-                            <img src="tool-heatmap.jpg" alt="Visualización de reglas de placement" class="slider-image" data-layer="Reglas Placement">
+                            <img src="assets/img/tool-result.jpg" alt="Entorno generado utilizando la herramienta de layout procedural" class="slider-image active" data-layer="Resultado Final">
+                            <img src="assets/img/tool-ui.jpg" alt="Interfaz de usuario de la herramienta de layout procedural" class="slider-image" data-layer="UI Herramienta">
+                            <img src="assets/img/tool-heatmap.jpg" alt="Visualización de mapa de densidad o reglas de placement de la herramienta" class="slider-image" data-layer="Reglas Placement">
                         </div>
                         <div class="slider-controls">
                              <button class="slider-control-item active" data-target-layer="Resultado Final">Resultado</button>
@@ -106,26 +162,63 @@
                 </div>
             </article>
 
-            </section>
+        </section> <!-- Fin de process-highlights -->
 
-        <section class="cta-section container">
-            <h2>Explora Más y Conecta</h2>
-            <div class="cta-buttons">
-                <a href="https://www.artstation.com/facu041294" class="cta-button" target="_blank">Ver Proyectos Visuales (ArtStation)</a>
-                <a href="https://github.com/facu041294" class="cta-button" target="_blank">Explorar Repositorios (GitHub)</a>
-                <a href="https://www.linkedin.com/in/facundovillarreal/" class="cta-button" target="_blank">Conectar Profesionalmente (LinkedIn)</a>
-                <a href="mailto:facu.villarreal.94@gmail.com" class="cta-button">Contactar</a>
+        <!-- En la sección .cta-buttons -->
+        <section class="social-links">    
+            <div>
+                <a href="https://www.artstation.com/facu041294" target="_blank" rel="noopener noreferrer" aria-label="Visita mi perfil de Artstation">
+                    <img src="assets/img/artstation-svgrepo-com.svg" alt="Artstation Logo" class="social-icon">
+                </a>
+                <a href="https://linkedin.com/in/facundovillarreal/" target="_blank" rel="noopener noreferrer" aria-label="Visita mi perfil de LinkedIn">
+                    <img src="assets/img/linkedin-svgrepo-com.svg" alt="Linkedin Logo" class="social-icon">
+                </a>
+                <a href="https://github.com/facu041294" target="_blank" rel="noopener noreferrer" aria-label="Visita mi perfil de Github">
+                    <img src="assets/img/github-svgrepo-com.svg" alt="Github Logo" class="social-icon">
+                </a>
             </div>
         </section>
 
-    </main>
+<!-- Botón/Checkbox para el formulario de contacto -->
+<div class="contact-form-toggle-wrapper">
+    <input type="checkbox" id="contact-toggle-checkbox" class="contact-toggle-checkbox" aria-controls="contact-form-container">
+    <label for="contact-toggle-checkbox" class="cta-button contact-toggle-button" role="button" aria-expanded="false">
+        <svg><!-- Tu SVG de email/contacto aquí --></svg> Contactar
+    </label>
+    <div id="contact-form-container" class="contact-form-container" aria-hidden="true">
+        <!-- Aquí irá el formulario de Formspree, inicialmente oculto -->
+        <form action="https://formspree.io/f/TU_ID_FORMSPREE" method="POST" class="contact-form actual-form">
+            <h4>Envíame un mensaje directo:</h4>
+            <div class="form-group">
+                <label for="form-name">Nombre:</label>
+                <input type="text" id="form-name" name="name" required>
+            </div>
+            <div class="form-group">
+                <label for="form-email">Email:</label>
+                <input type="email" id="form-email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="form-message">Mensaje:</label>
+                <textarea id="form-message" name="message" rows="5" required></textarea>
+            </div>
+            <button type="submit" class="cta-button submit-form-button">Enviar Mensaje</button>
+        </form>
+        <div class="thank-you-message" style="display: none;"> <!-- Mensaje de agradecimiento, inicialmente oculto -->
+            <p>¡Gracias por tu mensaje! Te responderé pronto.</p>
+        </div>
+    </div>
+</div>
 
+    </main> <!-- Fin del contenido principal -->
+
+    <!-- Pie de Página del Sitio -->
     <footer class="site-footer">
         <div class="container">
-            <p>&copy; <span id="current-year"></span> Facundo Villarreal. Todos los derechos reservados.</p>
-            </div>
+            <p>© <span id="current-year"></span> Facundo Villarreal. Todos los derechos reservados.</p>
+            <!-- El script se encarga de actualizar el año -->
+        </div>
     </footer>
 
-    
-    </body>
+    <!-- El script principal se carga al final para mejor rendimiento -->
+</body>
 </html>
