Fix Svg Social Contact & Themes
Se reemplazó los SVG externos(archivos) por SVG inline

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <!-- El JS se encargará de poner el SVG correcto aquí -->
                     <span class="icon-theme-current">
                         <!-- Placeholder para el SVG del sol, luna o monitor -->
-                        <img src="assets/img/sun-svgrepo-com.svg" alt="Tema actual" class="theme-icon-svg">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-sun-icon lucide-sun"><circle cx="12" cy="12" r="4"/><path d="M12 2v2"/><path d="M12 20v2"/><path d="m4.93 4.93 1.41 1.41"/><path d="m17.66 17.66 1.41 1.41"/><path d="M2 12h2"/><path d="M20 12h2"/><path d="m6.34 17.66-1.41 1.41"/><path d="m19.07 4.93-1.41 1.41"/></svg>
                     </span>
                 </button>
                 <!-- Botón para cambiar entre modo artista y técnico -->
@@ -209,7 +209,7 @@ def procedural_placement(assets_to_place, target_actor, rules):
 
                 <!-- ESTE ES EL LABEL QUE ACTÚA COMO BOTÓN -->
                 <label for="contact-toggle-checkbox" class="connect-button contact-toggle-button-styled" role="button" tabindex="0" aria-expanded="false">
-                    <img src="assets/img/mail-heart-svgrepo-com.svg" alt="" class="connect-button-icon" aria-hidden="true">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-send-icon lucide-send"><path d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"/><path d="m21.854 2.147-10.94 10.939"/></svg>
                     Mensaje Directo
                 </label>
             </div>
