--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                             allow="autoplay; fullscreen; picture-in-picture"
                             allowfullscreen
                             loading="lazy"
-                            title="Reel o Video Destacado de Facundo Villarreal">
+                            title="Reel o Video Destacado de Facundo Villarreal"
+                            fetchpriority="low">
                         </iframe>
                     </div>
                 </div>
@@ -158,6 +159,9 @@
         <div class="container">
             <p>© 2023 - <span id="current-year"></span> Facundo Villarreal. Todos los derechos reservados.</p>
             <!-- El script se encarga de actualizar el año -->
+            <a href="https://github.com/facu041294/Portfolio_V01" target="_blank" rel="noopener noreferrer" class="cta-link">
+                Ver repositorio de este sitio en GitHub
+            </a>
         </div>
     </footer>
 
