Up new video in Hero Section
Se reemplazó video de muestra por primer proyecto en el Portfolio

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
                 <div class="hero-visual-content">
                     <div class="vimeo-embed-responsive">
                         <iframe 
-                            src="https://player.vimeo.com/video/983405007?h=9c4d70c300&autopause=0&background=1&dnt=1"
+                            src="https://player.vimeo.com/video/1100758815?h=9c4d70c300&autopause=0&background=1&dnt=1"
                             frameborder="0"
                             allow="autoplay; fullscreen; picture-in-picture"
                             allowfullscreen
                             loading="lazy"
-                            title="Reel o Video Destacado de Facundo Villarreal"
+                            title="Video Destacado de Facundo Villarreal"
                             fetchpriority="low">
                         </iframe>
                     </div>
@@ -115,14 +115,7 @@
             </p>
 
             <div class="connect-buttons-grid">
-                
                 <!-- Fue reemplazado por el modulo de loadSocial.js-->
-                
-                <!-- ESTE ES EL LABEL QUE ACTÚA COMO BOTÓN -->
-                <label for="contact-toggle-checkbox" class="connect-button contact-toggle-button-styled" role="button" tabindex="0" aria-expanded="false">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-send-icon lucide-send"><path d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"/><path d="m21.854 2.147-10.94 10.939"/></svg>
-                    Mensaje Directo
-                </label>
             </div>
 
             <!-- ESTE ES EL CONTENEDOR DEL CHECKBOX Y DEL FORMULARIO DESPLEGABLE -->
@@ -159,7 +152,7 @@
         <div class="container">
             <p>© 2023 - <span id="current-year"></span> Facundo Villarreal. Todos los derechos reservados.</p>
             <!-- El script se encarga de actualizar el año -->
-            <a href="https://github.com/facu041294/Portfolio_V01" target="_blank" rel="noopener noreferrer" class="cta-link">
+            <a href="https://github.com/facu041294/PortfolioTechArt" target="_blank" rel="noopener noreferrer" class="cta-link">
                 Ver repositorio de este sitio en GitHub
             </a>
         </div>
